feat: align embedded kits with mother billing core