@@ -16,7 +16,7 @@ import com.ruoyi.system.domain.cost.bo.CostFeeCalculateBo;
 import com.ruoyi.system.domain.cost.bo.CostInputBuildPreviewBo;
 import com.ruoyi.system.domain.cost.bo.CostSimulationExecuteBo;
 import com.ruoyi.system.service.cost.ICostRunService;
-import jakarta.validation.Valid;
+import javax.validation.Valid;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -207,12 +207,12 @@ public class CostLiteRunController extends CostLiteControllerSupport {
     }
 
     private List<Long> parseIds(String text) {
-        if (text == null || text.isBlank()) {
+        if (text == null || text.trim().isEmpty()) {
             return Collections.emptyList();
         }
         List<Long> ids = new ArrayList<>();
         for (String item : text.split(",")) {
-            if (item != null && !item.isBlank()) {
+            if (item != null && !item.trim().isEmpty()) {
                 ids.add(Long.valueOf(item.trim()));
             }
         }
